--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "v-money": "^0.8.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
